--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: rust
+
+sudo: required
+dist: trusty
+
+addons:
+    apt:
+        packages:
+            - libssl-dev
+
+cache: cargo
 rust:
     - nightly
     # litmus test for when const_generics stabilizes
@@ -7,3 +17,19 @@ rust:
 # matrix:
 #     allow_failures:
 #         - rust: nightly
+
+before_cache: |
+  if [[ "$TRAVIS_RUST_VERSION" == stable ]]; then
+    cargo install cargo-tarpaulin
+  fi
+
+script:
+- cargo clean
+- cargo build
+- cargo test
+
+after_success: |
+  if [[ "$TRAVIS_RUST_VERSION" == stable ]]; then
+    cargo tarpaulin --out Xml
+    bash <(curl -s https://codecov.io/bash)
+  fi
