--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 digest = "0.8.1"
 rand = "0.6.5"
+generic-array = "0.13.2"
+arrayvec = "0.5.1"
 
 [dev-dependencies]
 sha2 = "0.8.1"
