--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 [dependencies]
 digest = "0.8.1"
 rand = "0.6.5"
-generic-array = "0.13.2"
+generic-array = "0.12.3"
 arrayvec = "0.5.1"
+serde = "1.0.104"
 
 [dev-dependencies]
 sha2 = "0.8.1"
