Overhauled net implementation to use async/await
The user is now completely free to do attach their own executor to the
gateway.

- shutdown()'s signature changed to take it Self as reference.
- Removed request timeouts for now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ rand = "0.6.5"
 generic-array = "0.12.3"
 arrayvec = "0.5.1"
 serde = "1.0.104"
+async-std = "1.5.0"
+futures = "0.3.4"
 
 [dev-dependencies]
-sha2 = "0.8.1"
 secp256k1 = { version = "0.17.2", features = ["rand"] }
-futures = "0.3.4"
+sha2 = "0.8.1"
